--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,21 +1,7 @@
-@media all and (min-width: $desktop-screen) {
-    .footer {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        display: flex;
-        flex-direction: column;
-        margin-top: 1rem;
-        text-align: center;
-    }
-}
 
-@media all and (min-width: 0px) and (max-width: $mobile-screen) {
     .footer {
         padding-top: 1rem;
         padding-bottom: 1rem;
-        display: flex;
-        flex-direction: column;
         margin-top: 1rem;
         text-align: center;
     }
-}
