--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -18,7 +18,7 @@
         &-left {
             display: flex;
             margin-right: 5rem;
-            max-width: 19.5vw;
+            max-width: 20vw;
         }
 
         &-title {
@@ -51,8 +51,7 @@
                 border-radius: 2rem;
                 width: 100%;
                 margin-bottom: 2rem;
-                margin-left: 10rem;
-                margin-right: 10rem;
+                margin-top: 1rem;
                 height: auto;
             }
 
@@ -63,6 +62,8 @@
         }
         &-left {
             display: flex;
+            margin-left: 10%;
+            margin-right: 10%;
         }
 
         &-title {
@@ -79,5 +80,29 @@
         li {
             padding-top: .25rem;
         }
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+
+    .about {
+        &-container {
+            display: flex;
+            margin: 2.5em 5em 2.5em 5em;
+            img {
+                border-radius: 2rem;
+                width: 45%;
+            }
+
+    .about-left {
+        display: inline-block;
+        text-align: center;
+        margin: 0 auto;
+    }
+    .about-right {
+        text-align: justify;
+        width: 85%;
+    }
+}
     }
 }
